--- a/vediocall.html
+++ b/vediocall.html
@@ -66,7 +66,7 @@
     <div class="row video-group">
       <div class="col">
         <p id="local-player-name" class="player-name"></p>
-        <div id="local-player" class="player"></div>
+        <div id="local-player" class="playe"></div>
       </div>
       <div class="w-100"></div>
       <div class="col">
@@ -79,5 +79,6 @@
   <script src="./vendor/bootstrap.bundle.min.js"></script>
   <script src="./AgoraRTC_N-4.5.0.js"></script>
   <script src="./index.js"></script>
+  
 </body>
 </html>
